--- a/Compartilhado/Compartilhado.csproj
+++ b/Compartilhado/Compartilhado.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.0" />
 		<PackageReference Include="Amazon.Lambda.DynamoDBEvents" Version="2.3.0" />
 		<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.300.0" />
+		<PackageReference Include="AWSSDK.SQS" Version="3.7.300.8" />
 	</ItemGroup>
 
 </Project>
