--- a/Compartilhado/Compartilhado.csproj
+++ b/Compartilhado/Compartilhado.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="Amazon.Lambda.DynamoDBEvents" Version="2.3.0" />
 		<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.300.0" />
 		<PackageReference Include="AWSSDK.SQS" Version="3.7.300.8" />
+		<PackageReference Include="Amazon.Lambda.SQSEvents" Version="2.2.0" />
 	</ItemGroup>
 
 </Project>
